--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,6 @@
 	path = lib/permit2
 	url = https://github.com/Uniswap/permit2
 	ignore = dirty 
+[submodule "lib/safe-smart-account"]
+	path = lib/safe-smart-account
+	url = https://github.com/safe-global/safe-smart-account
